--- a/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
@@ -7112,7 +7112,7 @@
     "\n",
     "To account for the fact that the inferred scatter location is uncertain and predictions of each muon carry different uncertainties, the x0 prediction is computed per voxel using a weighted RMS of the scattering variables. The weights per voxel account for the efficiency of the detectors the muon passed through, the uncertainty in the muons' scattering parameters, and the probability of the scattering occurring in the given voxel according to the inferred scatter location and its uncertainty.\n",
     "\n",
-    "`tomopt.inference.volume.PanelX0Inferer` is used to compute predictions of the x0 composition of the passive volume from the `PanelScatterBatch` results."
+    "`tomopt.inference.volume.PanelX0Inferrer` is used to compute predictions of the x0 composition of the passive volume from the `PanelScatterBatch` results."
    ]
   },
   {
@@ -7121,7 +7121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.inference import PanelX0Inferer"
+    "from tomopt.inference import PanelX0Inferrer"
    ]
   },
   {
@@ -7130,7 +7130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0_inferer = PanelX0Inferer(volume=volume)"
+    "x0_inferrer = PanelX0Inferrer(volume=volume)"
    ]
   },
   {
@@ -7166,11 +7166,11 @@
    ],
    "source": [
     "%%time\n",
-    "pred = x0_inferer.x0_from_scatters(deltaz=volume.passive_size,\n",
-    "                                   total_scatter=sb.total_scatter.square().mean().sqrt()/np.sqrt(2),\n",
-    "                                   theta_in=sb.theta_in.square().mean().sqrt(),\n",
-    "                                   theta_out=sb.theta_out.square().mean().sqrt(),\n",
-    "                                   mom=sb.mu.mom[:,None].square().mean().sqrt())\n",
+    "pred = x0_inferrer.x0_from_scatters(deltaz=volume.passive_size,\n",
+    "                                    total_scatter=sb.total_scatter.square().mean().sqrt()/np.sqrt(2),\n",
+    "                                    theta_in=sb.theta_in.square().mean().sqrt(),\n",
+    "                                    theta_out=sb.theta_out.square().mean().sqrt(),\n",
+    "                                    mom=sb.mu.mom[:,None].square().mean().sqrt())\n",
     "pred"
    ]
   },
@@ -7182,7 +7182,7 @@
     "$$w_{v,i,j} = \\frac{\\epsilon_i\\times p_{i,j}}{\\left(2v\\alpha_{v_{0,i}}\\right)^2},$$\n",
     "where $\\epsilon$ is the total efficiency of the hits associated with muon $i$, $\\alpha_{v_{i}}$ is the uncertainty associated with variable $v$ of muon $i$, and $p_{i,j}$ is the integral in x,y,z over voxel $j$ of a mulitivariate Gaussian (uncorrelated) centred at the scatter location of muon $i$ and widths equal to the uncertainty of the scatter location in x,y,z.\n",
     "\n",
-    "`PanelX0Inferer` is set up to handle multiple batches of muon scatters. Variables are then computed by combining these batches together. Variables are computed when required (lazy evaluation) and then cached for later use. Adding a new batch will clear the cache."
+    "`PanelX0Inferrer` is set up to handle multiple batches of muon scatters. Variables are then computed by combining these batches together. Variables are computed when required (lazy evaluation) and then cached for later use. Adding a new batch will clear the cache."
    ]
   },
   {
@@ -7191,7 +7191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x0_inferer.add_scatters(sb)"
+    "x0_inferrer.add_scatters(sb)"
    ]
   },
   {
@@ -7218,7 +7218,7 @@
     }
    ],
    "source": [
-    "x0_inferer.muon_probs_per_voxel_zxy.shape"
+    "x0_inferrer.muon_probs_per_voxel_zxy.shape"
    ]
   },
   {
@@ -7245,14 +7245,14 @@
     }
    ],
    "source": [
-    "x0_inferer.muon_efficiency.shape, x0_inferer.muon_total_scatter.shape"
+    "x0_inferrer.muon_efficiency.shape, x0_inferrer.muon_total_scatter.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `get_voxel_zxy_x0_preds` method will expand the efficiencies and variables to match the shape of the `muon_probs_per_voxel_zxy`. The weighted RMS then aggregates over the muons, resulting in a rank-3 tensor (z,x,y). These weighted variables can then be fed to `x0_from_scatters`, to compute an X0 per voxel."
+    "The `_get_voxel_zxy_x0_preds` method will expand the efficiencies and variables to match the shape of the `muon_probs_per_voxel_zxy`. The weighted RMS then aggregates over the muons, resulting in a rank-3 tensor (z,x,y). These weighted variables can then be fed to `x0_from_scatters`, to compute an X0 per voxel."
    ]
   },
   {
@@ -7261,7 +7261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = x0_inferer.get_voxel_zxy_x0_preds()"
+    "pred = x0_inferrer._get_voxel_zxy_x0_preds()"
    ]
   },
   {
@@ -7566,7 +7566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred, eff_sum = x0_inferer.get_prediction()"
+    "pred, eff_sum = x0_inferrer.get_prediction()"
    ]
   },
   {
