--- a/examples/panel_detectors/03_fixed_budget_mode.ipynb
+++ b/examples/panel_detectors/03_fixed_budget_mode.ipynb
@@ -313,7 +313,7 @@
    "outputs": [],
    "source": [
     "from functools import partial\n",
-    "from tomopt.inference import DenseBlockClassifierFromX0s, PanelX0Inferer\n",
+    "from tomopt.inference import DenseBlockClassifierFromX0s, PanelX0Inferrer\n",
     "from tomopt.optimisation import PanelVolumeWrapper, VolumeClassLoss"
    ]
   },
@@ -338,7 +338,7 @@
     "                             xy_span_opt=partial(torch.optim.SGD, lr=0),\n",
     "                             budget_opt=partial(torch.optim.SGD, lr=1e1),\n",
     "                             loss_func=VolumeClassLoss(x02id={0:0, 1:1}, target_budget=None),\n",
-    "                             partial_volume_inferer=partial(DenseBlockClassifierFromX0s, n_block_voxels=u_volume, partial_x0_inferer=PanelX0Inferer, volume=volume, ratio_offset=-1, ratio_coef=1))"
+    "                             partial_volume_inferrer=partial(DenseBlockClassifierFromX0s, n_block_voxels=u_volume, partial_x0_inferrer=PanelX0Inferrer, volume=volume, ratio_offset=-1, ratio_coef=1))"
    ]
   },
   {
