Refactor, Fix: CostCoefWarmup uses median of collected losses, PanelOptConfig computed median of abs grad instead of abs of median grad

--- a/examples/panel_detectors/03_fixed_budget_mode.ipynb
+++ b/examples/panel_detectors/03_fixed_budget_mode.ipynb
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`CostCoefWarmup` can also be used to learn a suitable learning rate for the budget optimiser. Since we expect that the optimal shape of the panels to be reasonably square, we can set the desired rate of the xy_span to be 0, such that we do not learn it and the panels remain square."
+    "`PanelOptConfig` can also be used to learn a suitable learning rate for the budget optimiser. Since we expect that the optimal shape of the panels to be reasonably square, we can set the desired rate of the xy_span to be 0, such that we do not learn it and the panels remain square."
    ]
   },
   {
