Refactor: ScatterBatch uses unc and eff from hits; remove Abs and panel-specific versions

--- a/dev/bimodal_x0_1e3.ipynb
+++ b/dev/bimodal_x0_1e3.ipynb
@@ -196,7 +196,7 @@
     "    mu = MuonBatch(mus, init_z=volume.h)\n",
     "    volume(mu)\n",
     "    \n",
-    "    sb = PanelScatterBatch(mu, volume)\n",
+    "    sb = ScatterBatch(mu, volume)\n",
     "    inf = PanelX0Inferer(volume)\n",
     "    inf.add_scatters(sb)\n",
     "    vox_preds, weights = inf.get_prediction()\n",
