--- a/dev/bimodal_x0_grad_check.ipynb
+++ b/dev/bimodal_x0_grad_check.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "from tomopt.inference.volume import AbsVolumeInferer, AbsX0Inferer\n",
-    "from tomopt.inference.scattering import AbsScatterBatch\n",
+    "from tomopt.inference.scattering import ScatterBatch\n",
     "\n",
     "\n",
     "class BlockClassifierFromX0s(AbsVolumeInferer):\n",
@@ -226,11 +226,11 @@
     "        self.scatter_batches = self.x0_inferer.scatter_batches\n",
     "            \n",
     "\n",
-    "    def compute_efficiency(self, scatters: AbsScatterBatch) -> Tensor:\n",
+    "    def compute_efficiency(self, scatters: ScatterBatch) -> Tensor:\n",
     "        return self.x0_inferer.compute_efficiency(scatters=scatters)\n",
     "    \n",
     "\n",
-    "    def add_scatters(self, scatters: AbsScatterBatch) -> None:\n",
+    "    def add_scatters(self, scatters: ScatterBatch) -> None:\n",
     "        self.x0_inferer.add_scatters(scatters)\n",
     "        self.efficiencies.append(self.compute_efficiency(scatters=scatters))\n",
     "\n",
@@ -273,7 +273,7 @@
     "    mu = MuonBatch(mus, init_z=volume.h)\n",
     "    volume(mu)\n",
     "    \n",
-    "    sb = PanelScatterBatch(mu, volume)\n",
+    "    sb = ScatterBatch(mu, volume)\n",
     "    return sb"
    ]
   },
@@ -549,7 +549,7 @@
     "    muons = MuonBatch(MuonResampler.resample(gen(250), volume=volume, gen=gen), volume.h, device=DEVICE)\n",
     "    volume.load_rad_length(arb_rad_length, Tensor([X0[\"uranium\"]]))\n",
     "    volume(muons)\n",
-    "    return PanelScatterBatch(muons, volume)"
+    "    return ScatterBatch(muons, volume)"
    ]
   },
   {
@@ -869,7 +869,7 @@
     "    muons = MuonBatch(MuonResampler.resample(gen(250), volume=volume, gen=gen), volume.h, device=DEVICE)\n",
     "    volume.load_rad_length(arb_rad_length, Tensor([X0[\"beryllium\"]]))\n",
     "    volume(muons)\n",
-    "    return PanelScatterBatch(muons, volume)"
+    "    return ScatterBatch(muons, volume)"
    ]
   },
   {
