--- a/dev/bimodal_x0_opt_check.ipynb
+++ b/dev/bimodal_x0_opt_check.ipynb
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "from tomopt.inference.volume import AbsVolumeInferer, AbsX0Inferer\n",
-    "from tomopt.inference.scattering import AbsScatterBatch\n",
+    "from tomopt.inference.scattering import ScatterBatch\n",
     "\n",
     "\n",
     "class BlockClassifierFromX0s(AbsVolumeInferer):\n",
@@ -206,11 +206,11 @@
     "        self.scatter_batches = self.x0_inferer.scatter_batches\n",
     "            \n",
     "\n",
-    "    def compute_efficiency(self, scatters: AbsScatterBatch) -> Tensor:\n",
+    "    def compute_efficiency(self, scatters: ScatterBatch) -> Tensor:\n",
     "        return self.x0_inferer.compute_efficiency(scatters=scatters)\n",
     "    \n",
     "\n",
-    "    def add_scatters(self, scatters: AbsScatterBatch) -> None:\n",
+    "    def add_scatters(self, scatters: ScatterBatch) -> None:\n",
     "        self.x0_inferer.add_scatters(scatters)\n",
     "        self.efficiencies.append(self.compute_efficiency(scatters=scatters))\n",
     "\n",
