--- a/dev/bm3_gnn-gen_scatters.ipynb
+++ b/dev/bm3_gnn-gen_scatters.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sb = PanelScatterBatch(muons, volume)"
+    "sb = ScatterBatch(muons, volume)"
    ]
   },
   {
@@ -212,14 +212,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.inference.scattering import AbsScatterBatch\n",
+    "from tomopt.inference.scattering import ScatterBatch\n",
     "\n",
     "class GenDeepVolumeInferer(DeepVolumeInferer):\n",
-    "    def get_base_predictions(self, scatters: AbsScatterBatch) -> Tuple[Tensor, Tensor]:\n",
+    "    def get_base_predictions(self, scatters: ScatterBatch) -> Tuple[Tensor, Tensor]:\n",
     "        x = self.base_inferer._x0_from_dtheta(delta_z=self.size, mom=scatters.mu.reco_mom, dtheta=scatters.dtheta, theta_xy_in=scatters.theta_in, theta_xy_out=scatters.theta_out)[:, None]\n",
     "        return x, torch.zeros_like(x)\n",
     "    \n",
-    "    def add_scatters(self, scatters: AbsScatterBatch) -> None:\n",
+    "    def add_scatters(self, scatters: ScatterBatch) -> None:\n",
     "        self.scatter_batches.append(scatters)\n",
     "        x0, x0_unc = self.get_base_predictions(scatters)\n",
     "        self.in_vars.append(torch.cat((scatters.dtheta, scatters.dxy, x0, scatters.location), dim=-1))\n",
