--- a/dev/bm3_gnn.ipynb
+++ b/dev/bm3_gnn.ipynb
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sb = PanelScatterBatch(muons, volume)"
+    "sb = ScatterBatch(muons, volume)"
    ]
   },
   {
@@ -1361,7 +1361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sb = PanelScatterBatch(muons, volume)"
+    "sb = ScatterBatch(muons, volume)"
    ]
   },
   {
