--- a/dev/phidet_scatter.ipynb
+++ b/dev/phidet_scatter.ipynb
@@ -841,9 +841,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.inference.scattering import AbsScatterBatch\n",
+    "from tomopt.inference.scattering import ScatterBatch\n",
     "\n",
-    "class PhiDetScatterBatch(AbsScatterBatch):\n",
+    "class PhiDetScatterBatch(ScatterBatch):\n",
     "    def _extract_hits(self) -> None:\n",
     "        # reco x, reco y, gen z, must be a list to allow computation of uncertainty\n",
     "        above_hits = torch.stack(\n",
