--- a/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
@@ -6575,7 +6575,7 @@
     "## Scattering inference\n",
     "Now that we can construct volumes and pass muons through them, the next step is to infer the composition of the passive volume from the scattering of the muons. So far in TomOpt, the only method implemented uses the Point Of Closest Approach (POCA). This involves extrapolating straight lines from hits in the detector panels above and below the passive volume. The difference in angle for these lines is due to the multiple scattering across all of the passive layers, however as a simplification, the entirety of the multiple scattering is assumed to have occurred at the point of closest approach of the two lines; i.e. every muon only provides information for a single point, and that information is biased to underestimate x0.\n",
     "\n",
-    "The `tomopt.inference.scattering.PanelScatterBatch` class is initialised using the muon batch after propagation and the volume through which it was propagated. For every muon that stays within the volume, it will compute in absolute units:\n",
+    "The `tomopt.inference.scattering.ScatterBatch` class is initialised using the muon batch after propagation and the volume through which it was propagated. For every muon that stays within the volume, it will compute in absolute units:\n",
     "- `poca_xyz`: The location of the point of closest approach. (muons, x, y, z).\n",
     "- `dtheta`: The difference in $\\theta$ of the extrapolated muons trajectories, i.e. the shift in angle due to multiple scattering. (muons, $\\delta\\theta$).\n",
     "- `dphi`: The difference in $\\phi$ of the extrapolated muons trajectories, i.e. the shift in angle due to multiple scattering. (muons, $\\delta\\phi$).\n",
@@ -6593,7 +6593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.inference import PanelScatterBatch"
+    "from tomopt.inference import ScatterBatch"
    ]
   },
   {
@@ -6623,7 +6623,7 @@
    ],
    "source": [
     "%%time\n",
-    "sb = PanelScatterBatch(mu=muons, volume=volume)"
+    "sb = ScatterBatch(mu=muons, volume=volume)"
    ]
   },
   {
@@ -7121,7 +7121,7 @@
     "\n",
     "To account for the fact that the inferred scatter location is uncertain and predictions of each muon carry different uncertainties, the x0 prediction is computed per voxel using a weighted RMS of the scattering variables. The weights per voxel account for the efficiency of the detectors the muon passed through, the uncertainty in the muons' scattering parameters, and the probability of the scattering occurring in the given voxel according to the inferred scatter location and its uncertainty.\n",
     "\n",
-    "`tomopt.inference.volume.PanelX0Inferrer` is used to compute predictions of the x0 composition of the passive volume from the `PanelScatterBatch` results."
+    "`tomopt.inference.volume.PanelX0Inferrer` is used to compute predictions of the x0 composition of the passive volume from the `ScatterBatch` results."
    ]
   },
   {
