--- a/dev/bm2_gnn.ipynb
+++ b/dev/bm2_gnn.ipynb
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sb = PanelScatterBatch(muons, volume)"
+    "sb = ScatterBatch(muons, volume)"
    ]
   },
   {
