Feat: Muons have their own z position

--- a/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "muons.propagate(dz=0.1)"
+    "muons.propagate_dz(dz=0.1)"
    ]
   },
   {
@@ -460,7 +460,7 @@
    ],
    "source": [
     "muons = MuonBatch(gen(1000), init_z=1)\n",
-    "muons.propagate(0.1)\n",
+    "muons.propagate_dz(0.1)\n",
     "muons.z"
    ]
   },
