--- a/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/panel_detectors/01_Indepth_tutorial_single_cycle.ipynb
@@ -7934,9 +7934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tomopt]",
+   "display_name": "tomopt",
    "language": "python",
-   "name": "conda-env-tomopt-py"
+   "name": "tomopt"
   },
   "language_info": {
    "codemirror_mode": {
@@ -7948,7 +7948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.15"
   },
   "toc": {
    "base_numbering": 1,
