Fix defaults for volume.draw

--- a/examples/panel_detectors/00_Hello_World.ipynb
+++ b/examples/panel_detectors/00_Hello_World.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
    "source": [
     "# Uncomment magic lines if you want an interactive plot that you need to rotate\n",
     "# %matplotlib notebook\n",
-    "volume.draw()\n",
+    "volume.draw(xlim=(-1,2), ylim=(1,2), zlim=(0.1.2))\n",
     "# %matplotlib inline"
    ]
   },
@@ -486,7 +486,7 @@
    "source": [
     "# Uncomment magic lines if you want an interactive plot that you need to rotate\n",
     "# %matplotlib notebook\n",
-    "volume.draw()\n",
+    "volume.draw(xlim=(-1,2), ylim=(1,2), zlim=(0.1.2))\n",
     "# %matplotlib inline\n"
    ]
   },
