Examples: Add limiter to examples

--- a/examples/panel_detectors/00_Hello_World.ipynb
+++ b/examples/panel_detectors/00_Hello_World.ipynb
@@ -335,7 +335,8 @@
     "- `PanelMetricLogger`: It is useful to have an indication of the progress the optimisation, and the current state of the detector. `tomopt.optimisation.callbacks.monitors.MetricLogger` provides real-time progress updates and telemetric data.\n",
     "- `CostCoefWarmup`: The loss contains a coefficient which is used to balance the error and cost components. This can be set manually or automatically. The loss contains a method to set the coefficient automatically, but it does so using the first volume tested, and so is subject to fluctuations. `tomopt.optimisation.callbacks.loss_callbacks.CostCoefWarmup` is a callback which will run a specified number of warm-up epochs during which the detectors will not be optimised, and instead a more stable cost coefficient will be computed.\n",
     "- `PanelOptConfig`: A recent addition is the `tomopt.optimisation.callbacks.opt_callbacks.PanelOptConfig` callback. Like the `CostCoefWarmup` it uses a warm-up period to track the gradients received by the detector parameters. The user can then instead specify their desired rate of change rate in physical units, and the learning rates of the optimisers will be overwritten to achieve the specified rates.\n",
-    "- `MuonResampler`: When optimising the detectors, we only want to consider muons which pass through the passive volume, however not all muons are guaranteed to do so. The `tomopt.optimisation.callbacks.data_callbacks.MuonResampler` will automatically regenerate muons which will not pass through the passive volume. Since this relies on \"truth\" information in the generator, this should not be used for realistic simulations."
+    "- `MuonResampler`: When optimising the detectors, we only want to consider muons which pass through the passive volume, however not all muons are guaranteed to do so. The `tomopt.optimisation.callbacks.data_callbacks.MuonResampler` will automatically regenerate muons which will not pass through the passive volume. Since this relies on \"truth\" information in the generator, this should not be used for realistic simulations.\n",
+    "- `PanelUpdateLimiter` limits the maximum amount that detector parameters can change in a single update. Like gradient clamping, this can be used to mitigate the effects of anomalous spikes in loss/gradient pushing the mdoe into a region of poor performance."
    ]
   },
   {
@@ -344,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.optimisation import NoMoreNaNs, PanelMetricLogger, CostCoefWarmup, PanelOptConfig, MuonResampler"
+    "from tomopt.optimisation import NoMoreNaNs, PanelMetricLogger, CostCoefWarmup, PanelOptConfig, MuonResampler, PanelUpdateLimiter"
    ]
   },
   {
@@ -455,7 +456,12 @@
     "                mu_bs=100,\n",
     "                trn_passives=passives,\n",
     "                val_passives=passives,\n",
-    "                cbs=[CostCoefWarmup(n_warmup=5), PanelOptConfig(n_warmup=5, xy_pos_rate=0.01, z_pos_rate=0.005, xy_span_rate=0.01), MuonResampler(), NoMoreNaNs(),PanelMetricLogger()])"
+    "                cbs=[CostCoefWarmup(n_warmup=5),\n",
+    "                     PanelOptConfig(n_warmup=5, xy_pos_rate=0.01, z_pos_rate=0.005, xy_span_rate=0.01),\n",
+    "                     MuonResampler(),\n",
+    "                     NoMoreNaNs(),\n",
+    "                     PanelUpdateLimiter(max_xy_step=(0.2, 0.2), max_xy_span_step=(0.2, 0.2), max_z_step=0.1),\n",
+    "                     PanelMetricLogger()])"
    ]
   },
   {
