--- a/examples/panel_detectors/03_fixed_budget_mode.ipynb
+++ b/examples/panel_detectors/03_fixed_budget_mode.ipynb
@@ -466,7 +466,10 @@
     "                trn_passives=trn_passives,\n",
     "                val_passives=trn_passives,\n",
     "                cbs=[PanelOptConfig(n_warmup=5, xy_pos_rate=0.05, z_pos_rate=0.001, budget_rate=0.1),\n",
-    "                     MuonResampler(), NoMoreNaNs(),PanelMetricLogger()])"
+    "                     MuonResampler(),\n",
+    "                     NoMoreNaNs(),\n",
+    "                     PanelUpdateLimiter(max_xy_step=(0.2, 0.2), max_xy_span_step=(0.2, 0.2), max_z_step=0.1),\n",
+    "                     PanelMetricLogger()])"
    ]
   },
   {
