--- a/examples/benchmarks/ladle_furnace.ipynb
+++ b/examples/benchmarks/ladle_furnace.ipynb
@@ -15,16 +15,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/giles/anaconda3/envs/tomopt/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch"
    ]
@@ -3544,9 +3535,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tomopt]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-tomopt-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3558,7 +3549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
