--- a/examples/getting_started/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/getting_started/01_Indepth_tutorial_single_cycle.ipynb
@@ -8141,9 +8141,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tomopt]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-tomopt-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8155,7 +8155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
