--- a/examples/getting_started/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
+++ b/examples/getting_started/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
@@ -1335,9 +1335,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tomopt]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-tomopt-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1349,7 +1349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
